--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,16 @@
 {
   "presets": [
     "env",
-    "react"
-  ]
+    "react",
+    "stage-0" 
+  ],
+  "plugins": [[
+    "transform-runtime",
+    {
+      "helpers": false,
+      "polyfill": false,
+      "regenerator": true,
+      "moduleName": "babel-runtime"
+    }
+  ]]
 }
